add docker container files

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "serve": "^11.3.0"
   },
   "scripts": {
+    "prod": "serve -s build -p 3000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
